@@ -182,6 +182,7 @@ string parsed_expression;
 bool parsed_had_errors = false, parsed_had_warnings = false;
 vector<DataProperty*> tmp_props;
 vector<DataProperty*> tmp_props_orig;
+bool keep_unit_selection = false;
 
 string command_convert_units_string;
 Unit *command_convert_unit;
@@ -3341,6 +3342,7 @@ void on_tUnitSelector_selection_changed(GtkTreeSelection *treeselection, gpointe
 	if(gtk_tree_selection_get_selected(treeselection, &model, &iter)) {
 		Unit *u;
 		gtk_tree_model_get(model, &iter, 1, &u, -1);
+		keep_unit_selection = true;
 		for(size_t i = 0; i < CALCULATOR->units.size(); i++) {
 			if(CALCULATOR->units[i] == u) {
 				if(u->subtype() == SUBTYPE_COMPOSITE_UNIT) {
@@ -3351,6 +3353,7 @@ void on_tUnitSelector_selection_changed(GtkTreeSelection *treeselection, gpointe
 				if(!block_unit_selector_convert) convert_from_convert_entry_unit();
 			}
 		}
+		keep_unit_selection = false;
 	}
 }
 
@@ -4661,6 +4664,39 @@ cairo_surface_t *draw_structure(MathStructure &m, PrintOptions po, InternalPrint
 					number_approx_map[(void*) &m.number()] = FALSE;
 				}
 			}
+			/*if(po.number_fraction_format == FRACTION_DECIMAL && po.is_approximate && *po.is_approximate && m.number().isRational() && ips.depth == 0 && !ips.parent_approximate && m.number().denominatorIsLessThan(10) && m.number().numeratorIsLessThan(21)) {
+				MathStructure mprint(m.number().numerator());
+				mprint.transform(STRUCT_DIVISION, m.number().denominator());
+				mprint.transform(STRUCT_COMPARISON);
+				mprint.setComparisonType(COMPARISON_EQUALS);
+				m.ref();
+				mprint.addChild_nocopy(&m);
+				surface = draw_structure(mprint, po, ips, &central_point, scaledown, color);
+				cr = cairo_create(surface);
+				gint w, h, wle, hle, w_new, h_new;
+				w = cairo_image_surface_get_width(surface) / scalefactor;
+				h = cairo_image_surface_get_height(surface) / scalefactor;
+				cairo_surface_t *surface_old = surface;
+				PangoLayout *layout_equals = gtk_widget_create_pango_layout(resultview, NULL);
+				PANGO_TT(layout_equals, "=");
+				CALCULATE_SPACE_W
+				pango_layout_get_pixel_size(layout_equals, &wle, &hle);
+				w_new = w + wle + 1 + space_w;
+				h_new = h;
+				surface = cairo_image_surface_create(CAIRO_FORMAT_ARGB32, w_new * scalefactor, h_new * scalefactor);
+				cairo_surface_set_device_scale(surface, scalefactor, scalefactor);
+				cr = cairo_create(surface);
+				gdk_cairo_set_source_rgba(cr, color);
+				cairo_move_to(cr, 1, h - central_point - hle / 2 - hle % 2);
+				pango_cairo_show_layout(cr, layout_equals);
+				cairo_set_source_surface(cr, surface_old, wle + 1 + space_w, 0);
+				cairo_paint(cr);
+				cairo_surface_destroy(surface_old);
+				g_object_unref(layout_equals);
+				if(cr) cairo_destroy(cr);
+				if(point_central) *point_central = central_point;
+				return surface;
+			}*/
 			if((!use_e_notation || (po.base != BASE_DECIMAL && po.base >= 2 && po.base <= 36)) && !exp.empty()) {
 				if(value_str == "1") {
 					MathStructure mnr(m_one);
@@ -4920,6 +4956,42 @@ cairo_surface_t *draw_structure(MathStructure &m, PrintOptions po, InternalPrint
 				g_object_unref(layout_minus);
 				return NULL;
 			}
+			/*if(ips.depth == 0 && !ips.parent_approximate && !m[0].isApproximate() && m[0].isNumber() && po.number_fraction_format == FRACTION_DECIMAL && po.is_approximate && *po.is_approximate && m[0].number().isRational() && ips.depth == 0 && m[0].number().denominatorIsLessThan(10) && m[0].number().numeratorIsLessThan(21)) {
+				cairo_surface_destroy(surface_arg);
+				g_object_unref(layout_minus);
+				MathStructure mprint(m[0].number().numerator());
+				mprint.transform(STRUCT_DIVISION, m[0].number().denominator());
+				mprint.transform(STRUCT_NEGATE);
+				mprint.transform(STRUCT_COMPARISON);
+				mprint.setComparisonType(COMPARISON_EQUALS);
+				m.ref();
+				mprint.addChild_nocopy(&m);
+				surface = draw_structure(mprint, po, ips, &central_point, scaledown, color);
+				cr = cairo_create(surface);
+				gint w, h, wle, hle, w_new, h_new;
+				w = cairo_image_surface_get_width(surface) / scalefactor;
+				h = cairo_image_surface_get_height(surface) / scalefactor;
+				cairo_surface_t *surface_old = surface;
+				PangoLayout *layout_equals = gtk_widget_create_pango_layout(resultview, NULL);
+				PANGO_TT(layout_equals, "=");
+				CALCULATE_SPACE_W
+				pango_layout_get_pixel_size(layout_equals, &wle, &hle);
+				w_new = w + wle + 1 + space_w;
+				h_new = h;
+				surface = cairo_image_surface_create(CAIRO_FORMAT_ARGB32, w_new * scalefactor, h_new * scalefactor);
+				cairo_surface_set_device_scale(surface, scalefactor, scalefactor);
+				cr = cairo_create(surface);
+				gdk_cairo_set_source_rgba(cr, color);
+				cairo_move_to(cr, 1, h - central_point - hle / 2 - hle % 2);
+				pango_cairo_show_layout(cr, layout_equals);
+				cairo_set_source_surface(cr, surface_old, wle + 1 + space_w, 0);
+				cairo_paint(cr);
+				cairo_surface_destroy(surface_old);
+				g_object_unref(layout_equals);
+				if(cr) cairo_destroy(cr);
+				if(point_central) *point_central = central_point;
+				return surface;
+			}*/
 			wtmp = cairo_image_surface_get_width(surface_arg) / scalefactor;
 			htmp = cairo_image_surface_get_height(surface_arg) / scalefactor;
 			hpa = htmp;
@@ -15653,6 +15725,7 @@ void on_convert_entry_unit_changed(GtkEditable *w, gpointer) {
 	bool b = gtk_entry_get_text_length(GTK_ENTRY(w)) > 0;
 	gtk_entry_set_icon_from_icon_name(GTK_ENTRY(w), GTK_ENTRY_ICON_SECONDARY, b ? "edit-clear-symbolic" : NULL);
 	gtk_entry_set_icon_tooltip_text(GTK_ENTRY(w), GTK_ENTRY_ICON_SECONDARY, b ? _("Clear expression") : NULL);
+	if(!keep_unit_selection) gtk_tree_selection_unselect_all(gtk_tree_view_get_selection(GTK_TREE_VIEW(tUnitSelector)));
 }
 
 
@@ -16381,6 +16454,7 @@ void on_popup_menu_convert_convert_activate(GtkMenuItem*, gpointer) {
 	Unit *u = popup_convert_unit;
 	if(!u && gtk_tree_selection_get_selected(select, &model, &iter_sel)) gtk_tree_model_get(model, &iter_sel, 1, &u, -1);
 	if(u) {
+		keep_unit_selection = true;
 		for(size_t i = 0; i < CALCULATOR->units.size(); i++) {
 			if(CALCULATOR->units[i] == u) {
 				if(u->subtype() == SUBTYPE_COMPOSITE_UNIT) {
@@ -16391,6 +16465,7 @@ void on_popup_menu_convert_convert_activate(GtkMenuItem*, gpointer) {
 				if(!block_unit_selector_convert) convert_from_convert_entry_unit();
 			}
 		}
+		keep_unit_selection = false;
 	}
 }
 gboolean on_convert_treeview_unit_button_press_event(GtkWidget *w, GdkEventButton *event, gpointer) {
@@ -21845,7 +21920,6 @@ void on_convert_entry_unit_activate(GtkEntry*, gpointer) {
 	convert_from_convert_entry_unit();
 	focus_keeping_selection();
 }
-
 
 vector<GtkWidget*> ewindows;
 vector<DataObject*> eobjects;
