@@ -1,3 +1,7 @@
+2019-03-13 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix lost signal handling in conversion tab (fixes search, popup menu, delete icon, etc.)
+
 2019-03-11 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Ask if the user wants the change the default behaviour and allow multiple instances
